--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
                 <p class="doubles">DQ: <p id="opponent_double_percentage">0.00</p>%</p>
             </div>
 		</div>
-		<div id="input">
+        <div id="input_grid">
             <button id="undo">UNDO</button>
-			<p id="user_input">0</p>
+			<p id="input_score">0</p>
             <button id="togo">TO GO</button>
-			<div id="input_grid">
-                <button class="input">26</button>
-                <button class="input">1</button>
-                <button class="input">2</button>
-                <button class="input">3</button>
-                <button class="input">60</button>
-                <button class="input">41</button>
-                <button class="input">4</button>
-                <button class="input">5</button>
-                <button class="input">6</button>
-                <button class="input">85</button>
-                <button class="input">45</button>
-                <button class="input">7</button>
-                <button class="input">8</button>
-                <button class="input">9</button>
-                <button class="input">100</button>
-                <button class="input">CLR</button>
-                <button class="input">0</button>
-                <button class="input" type="submit">no Score</button>
-			</div>
-		</div>
+            <button class="input">26</button>
+            <button class="input">1</button>
+            <button class="input">2</button>
+            <button class="input">3</button>
+            <button class="input">81</button>
+            <button class="input">41</button>
+            <button class="input">4</button>
+            <button class="input">5</button>
+            <button class="input">6</button>
+            <button class="input">85</button>
+            <button class="input">45</button>
+            <button class="input">7</button>
+            <button class="input">8</button>
+            <button class="input">9</button>
+            <button class="input">100</button>
+            <button class="input">60</button>
+            <button class="input">CLR</button>
+            <button class="input">0</button>
+            <button class="input" type="submit">no Score</button>
+            <button class="input">140</button>
+        </div>
 	</body>
 </html>
