--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             </div>
 		</div>
         <div id="input_grid">
-            <button id="undo">UNDO</button>
-			<p id="input_score">0</p>
-            <button id="togo">TO GO</button>
+            <button id="undo" class="input">UNDO</button>
+			<div id="input_score_wrapper">
+                <p id="input_score" class="input">0</p>
+            </div>
+            <button id="togo" class="input">TO GO</button>
             <button class="input">26</button>
             <button class="input">1</button>
             <button class="input">2</button>
