--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             </div>
 		</div>
         <div id="input_grid">
-            <button id="undo" class="input">UNDO</button>
+            <button id="undo" class="input"><img src="icons/undo.svg" alt=""></button>
 			<div id="input_score_wrapper">
                 <p id="input_score" class="input">0</p>
             </div>
-            <button id="togo" class="input">TO GO</button>
+            <button id="togo" class="input"><img src="icons/togo.svg" alt=""></button>
             <button class="input">26</button>
             <button class="input">1</button>
             <button class="input">2</button>
@@ -53,9 +53,9 @@
             <button class="input">9</button>
             <button class="input">100</button>
             <button class="input">60</button>
-            <button class="input">CLR</button>
+            <button class="input"><img src="icons/clear.svg" alt=""></button>
             <button class="input">0</button>
-            <button class="input" type="submit">no Score</button>
+            <button class="input" type="submit"><img src="icons/okay.svg" alt=""></button>
             <button class="input">140</button>
         </div>
 	</body>
