--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
 		</div>
         <div id="input_grid">
             <button id="undo" class="input"><img src="icons/undo.svg" alt=""></button>
-			<div id="input_score_wrapper">
-                <p id="input_score" class="input">0</p>
+			<div id="input_score_wrapper" class="input">
+                <p id="input_score">0</p>
             </div>
             <button id="togo" class="input"><img src="icons/togo.svg" alt=""></button>
-            <button class="input">26</button>
-            <button class="input">1</button>
-            <button class="input">2</button>
-            <button class="input">3</button>
-            <button class="input">81</button>
-            <button class="input">41</button>
-            <button class="input">4</button>
-            <button class="input">5</button>
-            <button class="input">6</button>
-            <button class="input">85</button>
-            <button class="input">45</button>
-            <button class="input">7</button>
-            <button class="input">8</button>
-            <button class="input">9</button>
-            <button class="input">100</button>
-            <button class="input">60</button>
+            <button class="input shortcut left">26</button>
+            <button class="input num">1</button>
+            <button class="input num">2</button>
+            <button class="input num">3</button>
+            <button class="input shortcut right">81</button>
+            <button class="input shortcut left">41</button>
+            <button class="input num">4</button>
+            <button class="input num">5</button>
+            <button class="input num">6</button>
+            <button class="input shortcut right">85</button>
+            <button class="input shortcut left">45</button>
+            <button class="input num">7</button>
+            <button class="input num">8</button>
+            <button class="input num">9</button>
+            <button class="input shortcut right">100</button>
+            <button class="input shortcut left">60</button>
             <button class="input"><img src="icons/clear.svg" alt=""></button>
-            <button class="input">0</button>
+            <button class="input num">0</button>
             <button class="input" type="submit"><img src="icons/okay.svg" alt=""></button>
-            <button class="input">140</button>
+            <button class="input shortcut right">140</button>
         </div>
 	</body>
 </html>
