--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <button class="input num">9</button>
             <button class="input shortcut right">100</button>
             <button class="input shortcut left">60</button>
-            <button class="input"><img src="icons/clear.svg" alt=""></button>
+            <button id="clear" class="input"><img src="icons/clear.svg" alt=""></button>
             <button class="input num">0</button>
-            <button class="input" type="submit"><img src="icons/okay.svg" alt=""></button>
+            <button id="enter" class="input" type="submit"><img src="icons/okay.svg" alt=""></button>
             <button class="input shortcut right">140</button>
         </div>
 	</body>
