--- a/index.html
+++ b/index.html
@@ -5,86 +5,129 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles/style.css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+		/>
 		<script src="js/script.js"></script>
 		<title>Darts Scorer</title>
 	</head>
 	<body>
-        <div class="container text-center bg-primary">
-            <div class="row">
-                <div class="col-6">
-                    <p class="name" id="player_name">Me</p>
-                    <div class="container text-center">
-                        <div class="row">
-                            <div class="col">
-                                <p class="sets">Sets: <span id="player_sets_count">0</span></p>
-                            </div>
-                            <div class="col">
-                                <p class="legs">Legs: <span id="player_legs_count">0</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="score" id="player_score">501</p>
-                    <p class="checkout" id="player_checkout">T20 T20 BULL</p>
-                    <p class="last_score">Last Score: <span id="player_last">0</span></p>
-                    <p class="average">AVG: <span id="player_average_leg">0.00</span> / <span id="player_average_overall">0.00</span></p>
-                    <p class="doubles">DQ: <span id="player_doubles">0.00</span>%</p>
-                </div>
-                <div class="col-6">
-                    <p class="name" id="opponent_name">Opponent</p>
-                    <div class="container text-center">
-                        <div class="row">
-                            <div class="col">
-                                <p class="sets">Sets: <span id="opponent_sets_count">0</span></p>
-                            </div>
-                            <div class="col">
-                                <p class="legs">Legs: <span id="opponent_legs_count">0</span></p>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="score" id="opponent_score">501</p>
-                    <p class="checkout" id="opponent_chackout">T20 T20 BULL</p>
-                    <p class="last_score">Last Score: <span id="opponent_last">0</span></p>
-                    <p class="average">AVG: <span id="opponent_average_leg">0.00</span> / <span id="opponent_average_overall">0.00</span></p>
-                    <p class="doubles">DQ: <span id="opponent_double_percentage">0.00</span>%</p>
-                </div>
-            </div>
-        </div>
-        <div class="container bg-secondary">
-            <div class="row text-center">
-                <div class="col"><button class="btn btn-outline-danger"><img src="icons/undo.svg" alt=""></button></div>
-                <div class="col"><button class="btn btn-outline-dark" id="btn-input-score">0</button></div>
-                <div class="col"><button class="btn btn-outline-success"><img src="icons/togo.svg" alt=""></button></div>
-            </div>
-            <div class="row text-center">
-                <div class="col"><button class="btn btn-outline-dark">26</button></div>
-                <div class="col"><button class="btn btn-outline-dark">1</button></div>
-                <div class="col"><button class="btn btn-outline-dark">2</button></div>
-                <div class="col"><button class="btn btn-outline-dark">3</button></div>
-                <div class="col"><button class="btn btn-outline-dark">81</button></div>
-            </div>
-            <div class="row text-center">
-                <div class="col"><button class="btn btn-outline-dark">41</button></div>
-                <div class="col"><button class="btn btn-outline-dark">4</button></div>
-                <div class="col"><button class="btn btn-outline-dark">5</button></div>
-                <div class="col"><button class="btn btn-outline-dark">6</button></div>
-                <div class="col"><button class="btn btn-outline-dark">85</button></div>
-            </div>
-            <div class="row text-center">
-                <div class="col"><button class="btn btn-outline-dark">45</button></div>
-                <div class="col"><button class="btn btn-outline-dark">7</button></div>
-                <div class="col"><button class="btn btn-outline-dark">8</button></div>
-                <div class="col"><button class="btn btn-outline-dark">9</button></div>
-                <div class="col"><button class="btn btn-outline-dark">100</button></div>
-            </div>
-            <div class="row text-center">
-                <div class="col"><button class="btn btn-outline-dark">60</button></div>
-                <div class="col"><button class="btn btn-danger"><img src="icons/clear.svg" alt=""></button></div>
-                <div class="col"><button class="btn btn-outline-dark">0</button></div>
-                <div class="col"><button class="btn btn-success"><img src="icons/okay.svg" alt=""></button></div>
-                <div class="col"><button class="btn btn-outline-dark">140</button></div>
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+		<div class="container text-center bg-primary" id="scoreboard">
+			<div class="row">
+				<div class="col-6">
+					<p class="name" id="player_name">Me</p>
+					<div class="container text-center">
+						<div class="row">
+							<div class="col">
+								<p class="sets">Sets: <span id="player_sets_count">0</span></p>
+							</div>
+							<div class="col">
+								<p class="legs">Legs: <span id="player_legs_count">0</span></p>
+							</div>
+						</div>
+					</div>
+					<p class="score" id="player_score">501</p>
+					<p class="checkout" id="player_checkout">T20 T20 BULL</p>
+					<p class="last_score">Last Score: <span id="player_last">0</span></p>
+					<p class="average">
+						AVG: <span id="player_average_leg">0.00</span> /
+						<span id="player_average_overall">0.00</span>
+					</p>
+					<p class="doubles">DQ: <span id="player_doubles">0.00</span>%</p>
+				</div>
+				<div class="col-6">
+					<p class="name" id="opponent_name">Opponent</p>
+					<div class="container text-center">
+						<div class="row">
+							<div class="col">
+								<p class="sets">
+									Sets: <span id="opponent_sets_count">0</span>
+								</p>
+							</div>
+							<div class="col">
+								<p class="legs">
+									Legs: <span id="opponent_legs_count">0</span>
+								</p>
+							</div>
+						</div>
+					</div>
+					<p class="score" id="opponent_score">501</p>
+					<p class="checkout" id="opponent_chackout">T20 T20 BULL</p>
+					<p class="last_score">
+						Last Score: <span id="opponent_last">0</span>
+					</p>
+					<p class="average">
+						AVG: <span id="opponent_average_leg">0.00</span> /
+						<span id="opponent_average_overall">0.00</span>
+					</p>
+					<p class="doubles">
+						DQ: <span id="opponent_double_percentage">0.00</span>%
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="container bg-secondary" id="input">
+			<div class="row text-center">
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-danger">
+						<img src="icons/undo.svg" alt="" />
+					</button>
+				</div>
+				<div class="col-6 gx-0">
+					<button class="btn btn-lg btn-outline-dark" id="btn-input-score">0</button>
+				</div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-success">
+						<img src="icons/togo.svg" alt="" />
+					</button>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">26</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">1</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">2</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">3</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">81</button></div>
+			</div>
+			<div class="row text-center">
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">41</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">4</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">5</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">6</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">85</button></div>
+			</div>
+			<div class="row text-center">
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">45</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">7</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">8</button></div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">9</button></div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-dark hotkey">100</button>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">60</button></div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-danger">
+						<img src="icons/clear.svg" alt="" />
+					</button>
+				</div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark">0</button></div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-success">
+						<img src="icons/okay.svg" alt="" />
+					</button>
+				</div>
+				<div class="col gx-0"><button class="btn btn-lg btn-outline-dark hotkey">140</button></div>
+			</div>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
