--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<title>Darts Scorer</title>
 	</head>
 	<body>
-		<div class="container text-center bg-primary" id="scoreboard">
+		<div class="container-fluid text-center bg-primary" id="scoreboard">
 			<div class="row">
 				<div class="col-6">
 					<p class="name" id="player_name">Me</p>
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container bg-secondary" id="input">
+		<div class="container-fluid bg-secondary" id="input">
 			<div class="row text-center">
 				<div class="col gx-0">
 					<button class="btn btn-lg btn-outline-danger">
