add button values

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="container-fluid bg-secondary" id="input">
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-danger" id="undo">
+					<button class="btn btn-lg btn-outline-danger" id="undo" value="undo">
 						<img src="icons/undo.svg" alt="" />
 					</button>
 				</div>
@@ -94,81 +94,81 @@
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-success" id="togo">
+					<button class="btn btn-lg btn-outline-success" id="togo" value="togo">
 						<img src="icons/togo.svg" alt="" />
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">26</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="26">26</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">1</button>
+					<button class="btn btn-lg btn-outline-dark" value="1">1</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">2</button>
+					<button class="btn btn-lg btn-outline-dark" value="2">2</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">3</button>
+					<button class="btn btn-lg btn-outline-dark" value="3">3</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">81</button>
-				</div>
-			</div>
-			<div class="row text-center">
-				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">41</button>
-				</div>
-				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">4</button>
-				</div>
-				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">5</button>
-				</div>
-				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">6</button>
-				</div>
-				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">85</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="81">81</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">45</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="41">41</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">7</button>
+					<button class="btn btn-lg btn-outline-dark" value="4">4</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">8</button>
+					<button class="btn btn-lg btn-outline-dark" value="5">5</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">9</button>
+					<button class="btn btn-lg btn-outline-dark" value="6">6</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">100</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="85">85</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">60</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="45">45</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-danger">
+					<button class="btn btn-lg btn-outline-dark" value="7">7</button>
+				</div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-dark" value="8">8</button>
+				</div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-dark" value="9">9</button>
+				</div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="100">100</button>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="60">60</button>
+				</div>
+				<div class="col gx-0">
+					<button class="btn btn-lg btn-danger" value="clear">
 						<img src="icons/clear.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark">0</button>
+					<button class="btn btn-lg btn-outline-dark" value="0">0</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-success">
+					<button class="btn btn-lg btn-success" value="okay">
 						<img src="icons/okay.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey">140</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="">140</button>
 				</div>
 			</div>
 		</div>
