--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 					<p class="score" id="player_score">501</p>
-					<p class="checkout" id="player_checkout">T20 T20 BULL</p>
+					<p class="checkout" id="player_checkout"></p>
 					<div class="stats">
 						<p class="last_score">
 							Last Score: <span id="player_last">0</span>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 					<p class="score" id="opponent_score">501</p>
-					<p class="checkout" id="opponent_chackout">T20 T20 BULL</p>
+					<p class="checkout" id="opponent_chackout"></p>
 					<div class="stats">
 						<p class="last_score">
 							Last Score: <span id="opponent_last">0</span>
@@ -101,7 +101,9 @@
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="26">26</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="26">
+						26
+					</button>
 				</div>
 				<div class="col gx-0">
 					<button class="btn btn-lg btn-outline-dark" value="1">1</button>
@@ -113,12 +115,16 @@
 					<button class="btn btn-lg btn-outline-dark" value="3">3</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="81">81</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="81">
+						81
+					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="41">41</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="41">
+						41
+					</button>
 				</div>
 				<div class="col gx-0">
 					<button class="btn btn-lg btn-outline-dark" value="4">4</button>
@@ -130,12 +136,16 @@
 					<button class="btn btn-lg btn-outline-dark" value="6">6</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="85">85</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="85">
+						85
+					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="45">45</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="45">
+						45
+					</button>
 				</div>
 				<div class="col gx-0">
 					<button class="btn btn-lg btn-outline-dark" value="7">7</button>
@@ -147,12 +157,16 @@
 					<button class="btn btn-lg btn-outline-dark" value="9">9</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="100">100</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="100">
+						100
+					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="60">60</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="60">
+						60
+					</button>
 				</div>
 				<div class="col gx-0">
 					<button class="btn btn-lg btn-danger" value="clear">
@@ -168,7 +182,9 @@
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="">140</button>
+					<button class="btn btn-lg btn-outline-dark hotkey" value="">
+						140
+					</button>
 				</div>
 			</div>
 		</div>
