adding first simple logic

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 			href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
 			rel="stylesheet"
 		/>
-		<script src="js/script.js"></script>
 		<title>Darts Scorer</title>
 	</head>
 	<body>
-		<div class="container-fluid text-center bg-primary" id="scoreboard">
-			<div class="row">
+		<div class="container container-fluid text-center bg-primary" id="scoreboard">
+			<div class="row align-items-center">
 				<div class="col col-6">
 					<p class="name" id="player_name">Me</p>
 					<div class="container text-center">
@@ -182,7 +181,7 @@
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="140">
 						140
 					</button>
 				</div>
@@ -193,5 +192,7 @@
 			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 			crossorigin="anonymous"
 		></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="js/script.js"></script>
 	</body>
 </html>
