put average calculation in function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<title>Darts Scorer</title>
 	</head>
 	<body>
-		<div class="container container-fluid text-center bg-primary" id="scoreboard">
+		<div class="container-fluid text-center bg-primary" id="scoreboard">
 			<div class="row align-items-center">
 				<div class="col col-6">
 					<p class="name" id="player_name">Me</p>
