--- a/index.html
+++ b/index.html
@@ -83,105 +83,105 @@
 		<div class="container-fluid bg-secondary" id="input">
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-danger" id="undo" value="undo">
+					<button class="btn btn-lg btn-outline-danger" id="undo" value="undo" tabindex="-1">
 						<img src="icons/undo.svg" alt="" />
 					</button>
 				</div>
 				<div class="col-6 gx-0">
-					<button class="btn btn-lg btn-outline-dark" id="btn-input-score">
+					<button class="btn btn-lg btn-outline-dark" id="btn-input-score" tabindex="-1">
 						0
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-success" id="togo" value="togo">
+					<button class="btn btn-lg btn-outline-success" id="togo" value="togo" tabindex="-1">
 						<img src="icons/togo.svg" alt="" />
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="26">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="26" tabindex="-1">
 						26
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="1">1</button>
+					<button class="btn btn-lg btn-outline-dark" value="1" tabindex="-1">1</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="2">2</button>
+					<button class="btn btn-lg btn-outline-dark" value="2" tabindex="-1">2</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="3">3</button>
+					<button class="btn btn-lg btn-outline-dark" value="3" tabindex="-1">3</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="81">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="81" tabindex="-1">
 						81
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="41">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="41" tabindex="-1">
 						41
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="4">4</button>
+					<button class="btn btn-lg btn-outline-dark" value="4" tabindex="-1">4</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="5">5</button>
+					<button class="btn btn-lg btn-outline-dark" value="5" tabindex="-1">5</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="6">6</button>
+					<button class="btn btn-lg btn-outline-dark" value="6" tabindex="-1">6</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="85">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="85" tabindex="-1">
 						85
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="45">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="45" tabindex="-1">
 						45
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="7">7</button>
+					<button class="btn btn-lg btn-outline-dark" value="7" tabindex="-1">7</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="8">8</button>
+					<button class="btn btn-lg btn-outline-dark" value="8" tabindex="-1">8</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="9">9</button>
+					<button class="btn btn-lg btn-outline-dark" value="9" tabindex="-1">9</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="100">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="100" tabindex="-1">
 						100
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="60">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="60" tabindex="-1">
 						60
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-danger" value="clear">
+					<button class="btn btn-lg btn-danger" value="clear" tabindex="-1">
 						<img src="icons/clear.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="0">0</button>
+					<button class="btn btn-lg btn-outline-dark" value="0" tabindex="-1">0</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-success" value="okay">
+					<button class="btn btn-lg btn-success" value="okay" tabindex="-1">
 						<img src="icons/okay.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="140">
+					<button class="btn btn-lg btn-outline-dark hotkey" value="140" tabindex="-1">
 						140
 					</button>
 				</div>
